---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2024-10-18
  Bugfixes:
    - Fixed handling signals without quality
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2024-10-18
  Bugfixes:
    - Fixed migration from old versions
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2024-10-14
  Changes:
    - Updated for Factorio version 2.0
---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: 2023-12-20
  Changes:
    - Updated readme
    - Items are refreshed periodically, opening gui when needed
  Bugfixes:
    - Fixed active items changing order of filters
    - Handling players who are removed
    - Fixed items changing order on update
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 2023-12-11
  Changes:
    - Middle button to put ghost in hand, to manually set filters or conditions
    - Add active items to items, so they can be easily unfiltered or unrequested
  Bugfixes:
    - Fixed invalid entity when getting button description
    - Fixed opening moving cargo wagons and spidertron
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2023-12-07
  Bugfixes:
    - Fixed opening non-filtered entities
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2023-12-07
  Changes:
    - Changed interface to use left/right-click to add and remove filters
    - Added support for logistic storage, requester and buffer chests